[package]
name = "druid-color-thesaurus"
version = "0.1.0"
authors = ["John Skottis <giannis.sc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.druid]
git = "https://github.com/linebender/druid"
rev = "fc05e965c85fced8720c655685e02478e0530e94" # update this when upgrading to newer druid
# path = "../../projects/druid/druid"
features = ["im"]
